# Client

./: .gitignore  CMakeLists.txt  README.md  UI.cpp  UI.h  config.json  main.cpp  model.cpp  vcpkg.json
include/: EnhancedUser.hpp  FileEncryption.hpp  FileManager.hpp  FileOperationBase.hpp  FileOperations.hpp  PACManager.hpp  Shareable.hpp  SharedFileOperation.hpp  TemplateFileManager.hpp  User.hpp  X3DH.hpp
include/database/: db_instance.h  models.h  schema.hpp
include/utils/: Config.cpp  Config.h  CryptoUtils.cpp  CryptoUtils.h  Ed25519Key.cpp  Ed25519Key.h  MasterKey.cpp  VaultManager.cpp  VaultManager.h  X25519Key.cpp  X25519Key.h
include/utils/cryptography/: 3xDH.cpp  3xDH.h  CryptoUtils.cpp  CryptoUtils.h  KeyGeneration.cpp  KeyGeneration.h  ThreexDH.cpp  VaultManager.cpp  VaultManager.h
include/utils/cryptography/keys/: Ed25519Key.cpp  Ed25519Key.h  IdentityKeyPairs.h  MasterKey.cpp  MasterKey.h  OPKPair.h  SignedPreKey.h  X25519Key.h
include/utils/dataclasses/: PAC.cpp  PAC.h  Vault.cpp  Vault.h
src/: Auth.cpp  Auth.h  DataManager.cpp  DataManager.h  File.cpp  File.h  FileManager.cpp  FileManager.h  FileOperations.cpp  KekService.h  RemoteUserManager.cpp  RemoteUserManager.h  RequestHeaders.h  Server.cpp  Server.h  UserManager.cpp  UserManager.h  kekService.cpp
src/models/: File.cpp  File.h  FileData.h  KEKModel.h  PublicKeys.h  RemoteUser.h  UserModel.h  UserModelORM.cpp  UserModelORM.h  file.h  kek.h  keys.h  pac.h  user.h
templates/: FileOperationHandlers.hpp
utils/: CryptoUtils.cpp  CryptoUtils.h  Ed25519Key.h  MasterKey.cpp  VaultManager.cpp  VaultManager.h  pac.cpp  pac.h
